criacao da rota de messages para o DB
