# src/routes/messages.ts
@@ -1,26 +1,24 @@
+import { PaginationDto } from "../dto/query/pagination.dto";
 import express, { Router, Request, Response } from "express";
 import MessageController from "../controllers/messages";
-import { validationMiddleware } from "../validation.middleware";
-import { SendMessageDto } from "../dto/message/sendMessage.dto";
-import { SendMessageMassiveDto } from "../dto/message/sendMassiveMessage.dto";
+import {
+  validationMiddleware,
+  validationMiddlewareGet,
+} from "../validation.middleware";
+import { PatchMessageDto } from "../dto/message/PatchMessage.dto";
 
 const router: Router = express.Router();
 
-// GET /messages
-router.get("/:clientId/:limit", MessageController.getMessages);
-
-// POST /messages
-router.post(
+router.get(
   "/",
-  validationMiddleware(SendMessageDto),
-  MessageController.sendMessages.bind(MessageController)
+  validationMiddlewareGet(PaginationDto),
+  MessageController.getMessages.bind(MessageController)
 );
 
-// POST /messages/massive
-router.post(
-  "/massive",
-  validationMiddleware(SendMessageMassiveDto),
-  MessageController.sendMessagesMassive.bind(MessageController)
+router.patch(
+  "/",
+  validationMiddleware(PatchMessageDto),
+  MessageController.patchMessages.bind(MessageController)
 );
 
 export default router;
