# src/swagger/wpp.yaml
@@ -58,12 +58,12 @@ components:
       type: object
       required:
         - content
-        - messages
+        - wpp
       properties:
         content:
           type: string
           description: O conteúdo da mensagem que foi enviada
-        messages:
+        wpp:
           type: array
           description: Lista de mensagens enviadas com detalhes
           items:
@@ -77,56 +77,20 @@ components:
                 description: O horário em UNIXTIME que a mensagem foi agendada para envio
       example:
         content: "Hello world"
-        messages:
+        wpp:
           - to: 5561982501719@c.us
             timeToSend: 1724873934
           - to: 5561982501820@c.us
             timeToSend: 1724873945
 
-    PatchMessage:
-      type: object
-      required:
-        - id
-      properties:
-        id:
-          type: integer
-          description: O ID da mensagem que foi atualizada
-        to:
-          type: string
-          description: O número de telefone do destinatário (5561982501719@c.us)
-        content:
-          type: string
-          description: O conteúdo da mensagem que foi enviado ou atualizado
-        contentType:
-          type: string
-          description: O tipo de conteúdo da mensagem (text, image, video)
-          enum:
-            - text
-            - image
-            - video
-        status:
-          type: string
-          description: O status atual da mensagem (await, sent, delivered, failed)
-          enum:
-            - await
-            - sent
-            - delivered
-            - failed
-      example:
-        id: 123
-        to: 5561982501719@c.us
-        content: "Hello world"
-        contentType: text
-        status: sent
-
 tags:
-  name: Messages
-  description: Recupere as informaçoes de mensagens armazenadas no banco de dados
+  name: wpp
+  description: Envie e veja as mensagens
 
-/messages:
+/wpp:
   post:
-    summary: Salve uma nova mensagem no banco de dados
-    tags: [Messages]
+    summary: Envie uma nova mensagem
+    tags: [wpp]
     requestBody:
       required: true
       content:
@@ -143,41 +107,43 @@ tags:
       500:
         description: Some server error
 
-  get:
-    summary: Recupere uma nova mensagem no banco de dados
-    tags: [Messages]
-    parameters:
-      - in: query
-        name: page
-        schema:
-          type: integer
-        description: The number of items to skip before starting to collect the result set
-      - in: query
-        name: pageSize
-        schema:
-          type: integer
-        description: The numbers of items to return
-    responses:
-      200:
-        description: A mensagem específica
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Message'
-      404:
-        description: Mensagem não encontrada
-      500:
-        description: Algum erro no servidor
-      
-  patch:
-    summary: Edite uma mensagem no banco de dados
-    tags: [Messages]
+/wpp/massive:
+  post:
+    summary: Envie mensagens em massa
+    tags: [wpp]
     requestBody:
       required: true
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/PatchMessage'
+            $ref: '#/components/schemas/SendMessageMassive'
+    responses:
+      200:
+        description: The created user.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SendMessageMassiveResp'
+      500:
+        description: Some server error
+
+/wpp/{remoteId}/{limit}:
+  get:
+    summary: Obtem o histórico de mensagens específica pelo ID
+    tags: [wpp]
+    parameters:
+      - in: path
+        name: remoteId
+        schema:
+          type: string
+        required: true
+        description: O ID contato das mesnagens a serem recuperadas
+      - in: path
+        name: limit
+        schema:
+          type: string
+        required: true
+        description: O numero de mensagens retornadas
     responses:
       200:
         description: A mensagem específica
